--- a/css/style.css
+++ b/css/style.css
@@ -7,22 +7,21 @@ body {
     margin: 0 auto;
 }
 
-.header {
+.header-wrapper {
     display: flex;
     justify-content: space-between;
     background-color: #fff;
-    margin: 10px 20px;
     height: 100px;
     line-height: 100px;
     padding: 10px 50px;
 }
 
-.header h1 {
+.header-wrapper h1 {
     font-size: 40px;
 }
 
 .inner-wrapper {
-    max-width: 900px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -32,7 +31,7 @@ body {
     margin: 50px 0;
 }
 
-.search {
+.search-container {
     background-color: #fff;
     border-radius: 5px;
     width: 400px;
@@ -40,20 +39,97 @@ body {
     line-height: 35px;
 }
 
-.search input {
+.search-container input {
     border: none;
     width: 370px;
     outline: none;
 }
 
-.mode {
-    font-size: 20px;
+.switch-wrapper {
+    align-items: center;
+    display: flex;
 }
 
+/*--------Switch Theme------------------*/
+.switch-button {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch-button input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #000;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #000;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+.slider .icon.sun {
+    left: 10px;
+}
+
+.slider .icon.moon {
+    right: 10px;
+}
+
+.slider .icon {
+    position: absolute;
+    font-size: 16px;
+    color: #fff;
+    top: 50%;
+    transform: translateY(-50%);
+    pointer-events: none;
+}
+
+/*--------End Switch Mode------------*/
 .filter {
-    line-height: 35px;
     background-color: #fff;
-    padding: 10px;
     border-radius: 5px;
     width: 200px;
     text-align: center;
@@ -62,11 +138,22 @@ body {
 #region {
     background-color: #fff;
     border: none;
+    width: 200px;
+    vertical-align: bottom;
+    text-align: center;
+    cursor: pointer;
+    font-size: 18px;
+    border-radius: 5px;
+}
+
+select {
+    height: 55px;
 }
 
 .content {
     display: flex;
     flex-flow: wrap;
+    justify-content: space-between;
 }
 
 .flag img {
@@ -76,10 +163,11 @@ body {
 }
 
 .country-box {
-    margin: 20px 25px 20px 0;
     width: 200px;
-    background-color: #fff;
+    margin: 10px 0;
+    background-color: #ccc;
     border-radius: 5px;
+    border: 1px solid #000;
 }
 
 .info {
@@ -91,6 +179,7 @@ body {
     font-weight: bold;
     font-size: 20px;
     padding: 20px 0;
+    text-align: center;
 }
 
 .mode {
